header add resp

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
 
@@ -18,21 +19,24 @@
             i'm a header nav
         </nav>
 
-        <div class="jumbotron container-sm">
-            <img src="" alt="">
-            <h1></h1>
-            <span>
+        <div class="jumbotron row justify-content-center py-4 text-center">
+            <div class="row col-sm-8 col-md-9 col-lg-10 justify-content-center">
+                <div class="col-6 col-md-4 col-lg-2 my-2">
+                    <img class="img-fluid" src="./img/avatar.svg" alt="avatar">
+                </div>
 
-            </span>
-
-            <span>
-
-            </span>
-
-            <span>
-
-            </span>
-
+                <h1>START BOOTSTRAP</h1>
+                       
+                <div class="row justify-content-center m-2">
+                    <div class="col-3 col-lg-2 p-lg-0"><hr></div>
+                    <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
+                    <div class="col-3 col-lg-2 p-lg-0"><hr></div>
+                </div>
+                <div>
+                    Graphic artist - Web Designer - Illustrator
+                </div>
+                
+            </div>
         </div>
     </header>
 
