--- a/index.html
+++ b/index.html
@@ -42,31 +42,38 @@
 
     <main>
 
-        <section class="portfolio">
-            <div class="row">
+        <section class="portfolio container p-2 mt-5 text-center">
 
-                <div class="col-12">
+            <h1>Portfolio</h1>
+            <div class="row justify-content-center m-2">
+                <div class="col-3 col-lg-2 p-lg-0"><hr></div>
+                <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
+                <div class="col-3 col-lg-2 p-lg-0"><hr></div>
+            </div>
+            <div class="row g-3 p-2 row-cols-1 row-cols-md-2 row-cols-lg-3">
 
+                <div class="col">
+                    <img class="img-fluid rounded" src="./img/cabin.png" alt="cabin">
                 </div>
 
-                <div class="col-12">
-
+                <div class="col">
+                    <img class="img-fluid rounded" src="./img/cake.png" alt="cake">
                 </div>
 
-                <div class="col-12">
-
+                <div class="col">
+                    <img class="img-fluid rounded" src="./img/circus.png" alt="circus">
                 </div>
 
-                <div class="col-12">
-
+                <div class="col">
+                    <img class="img-fluid rounded" src="./img/game.png" alt="game">
                 </div>
 
-                <div class="col-12">
-
+                <div class="col">
+                    <img class="img-fluid rounded" src="./img/safe.png" alt="safe">
                 </div>
 
-                <div class="col-12">
-
+                <div class="col">
+                    <img class="img-fluid rounded" src="./img/submarine.png" alt="submarine">
                 </div>
 
             </div>
