--- a/index.html
+++ b/index.html
@@ -19,37 +19,50 @@
             i'm a header nav
         </nav>
 
-        <div class="jumbotron row justify-content-center py-4 text-center">
+        <div class="jumbotron row justify-content-center py-4 py-lg-5 text-center">
             <div class="row col-sm-8 col-md-9 col-lg-10 justify-content-center">
                 <div class="col-6 col-md-4 col-lg-2 my-2">
                     <img class="img-fluid" src="./img/avatar.svg" alt="avatar">
                 </div>
 
-                <h1>START BOOTSTRAP</h1>
-                       
-                <div class="row justify-content-center m-2">
-                    <div class="col-3 col-lg-2 p-lg-0"><hr></div>
-                    <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
-                    <div class="col-3 col-lg-2 p-lg-0"><hr></div>
+                <div>
+                    <h1>START BOOTSTRAP</h1>
+                    <div class="row justify-content-center m-2">
+                        <div class="col-3 col-lg-1 p-lg-0">
+                            <hr>
+                        </div>
+                        <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
+                        <div class="col-3 col-lg-1 p-lg-0">
+                            <hr>
+                        </div>
+                    </div>
                 </div>
+
                 <div>
                     Graphic artist - Web Designer - Illustrator
                 </div>
-                
+
             </div>
         </div>
     </header>
 
     <main>
 
-        <section class="portfolio container p-2 mt-5 text-center">
+        <section class="portfolio container p-2 mt-5">
 
-            <h1>Portfolio</h1>
-            <div class="row justify-content-center m-2">
-                <div class="col-3 col-lg-2 p-lg-0"><hr></div>
-                <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
-                <div class="col-3 col-lg-2 p-lg-0"><hr></div>
+            <div class="text-center">
+                <h1>Portfolio</h1>
+                <div class="row justify-content-center m-2">
+                    <div class="col-3 col-lg-1 p-lg-0">
+                        <hr>
+                    </div>
+                    <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
+                    <div class="col-3 col-lg-1 p-lg-0">
+                        <hr>
+                    </div>
+                </div>
             </div>
+
             <div class="row g-3 p-2 row-cols-1 row-cols-md-2 row-cols-lg-3">
 
                 <div class="col">
@@ -80,10 +93,28 @@
 
         </section>
 
-        <section class="about">
-            <div class="row">
-                <div class="col-12"></div>
-                <div class="col-12"></div>
+        <section class="about p-4 py-lg-5">
+
+            <div class="text-center">
+                <h1>About</h1>
+                <div class="row justify-content-center m-2">
+                    <div class="col-3 col-lg-1 p-lg-0">
+                        <hr>
+                    </div>
+                    <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
+                    <div class="col-3 col-lg-1 p-lg-0">
+                        <hr>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-3">
+                <div class="col-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione inventore
+                    repellendus aut laudantium. Dolores, excepturi nobis culpa veniam dolor modi suscipit magni optio
+                    incidunt perferendis error corrupti facilis asperiores aperiam.</div>
+                <div class="col-12">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, nulla natus neque quam
+                    odio molestiae eos? Quibusdam cum nobis labore dignissimos iste quis quo fuga ut aperiam voluptas,
+                    eligendi aliquid?</div>
             </div>
         </section>
 
