--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
 
         <div class="jumbotron row justify-content-center py-4 py-lg-5 text-center">
-            <div class="row col-sm-8 col-md-9 col-lg-10 justify-content-center">
+            <div class="row col-sm-8 col-md-9 col-lg-12 justify-content-center">
                 <div class="col-6 col-md-4 col-lg-2 my-2">
                     <img class="img-fluid" src="./img/avatar.svg" alt="avatar">
                 </div>
@@ -28,11 +28,11 @@
                 <div>
                     <h1>START BOOTSTRAP</h1>
                     <div class="row justify-content-center m-2">
-                        <div class="col-3 col-lg-1 p-lg-0">
+                        <div class="col-3 col-md-2 col-lg-1 p-lg-0">
                             <hr>
                         </div>
                         <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
-                        <div class="col-3 col-lg-1 p-lg-0">
+                        <div class="col-3 col-md-2 col-lg-1 p-lg-0">
                             <hr>
                         </div>
                     </div>
@@ -53,11 +53,11 @@
             <div class="text-center">
                 <h1>Portfolio</h1>
                 <div class="row justify-content-center m-2">
-                    <div class="col-3 col-lg-1 p-lg-0">
+                    <div class="col-3 col-md-2 col-lg-1 p-lg-0">
                         <hr>
                     </div>
                     <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
-                    <div class="col-3 col-lg-1 p-lg-0">
+                    <div class="col-3 col-md-2 col-lg-1 p-lg-0">
                         <hr>
                     </div>
                 </div>
@@ -93,29 +93,34 @@
 
         </section>
 
-        <section class="about p-4 py-lg-5">
+        <section class="about row justify-content-center p-4 py-lg-5 my-md-4 my-lg-5">
 
-            <div class="text-center">
+            <div class="col-12 text-center">
                 <h1>About</h1>
                 <div class="row justify-content-center m-2">
-                    <div class="col-3 col-lg-1 p-lg-0">
+                    <div class="col-3 col-md-2 col-lg-1 p-lg-0">
                         <hr>
                     </div>
                     <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
-                    <div class="col-3 col-lg-1 p-lg-0">
+                    <div class="col-3 col-md-2 col-lg-1 p-lg-0">
                         <hr>
                     </div>
                 </div>
             </div>
 
-            <div class="row g-3">
-                <div class="col-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione inventore
+            <div class="row col-10 justify-content-center g-4 p-4 m-0">
+                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione inventore
                     repellendus aut laudantium. Dolores, excepturi nobis culpa veniam dolor modi suscipit magni optio
                     incidunt perferendis error corrupti facilis asperiores aperiam.</div>
-                <div class="col-12">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, nulla natus neque quam
+                <div class="col-12 col-md-6 col-lg-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, nulla natus neque quam
                     odio molestiae eos? Quibusdam cum nobis labore dignissimos iste quis quo fuga ut aperiam voluptas,
                     eligendi aliquid?</div>
             </div>
+
+            <div class="col-3 text-center my-2">
+                <button type="button" class="btn btn-outline-light"><i class="bi bi-download mx-1"></i> Download</button>
+            </div>
+            
         </section>
 
         <section class="contactme">
