sct contact add

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="portfolio container p-2 mt-5">
 
             <div class="text-center">
-                <h1>Portfolio</h1>
+                <h1>PORTFOLIO</h1>
                 <div class="row justify-content-center m-2">
                     <div class="col-3 col-md-2 col-lg-1 p-lg-0">
                         <hr>
@@ -95,8 +95,8 @@
 
         <section class="about row justify-content-center p-4 py-lg-5 my-md-4 my-lg-5">
 
-            <div class="col-12 text-center">
-                <h1>About</h1>
+            <div class="col-12 text-center">                
+                <h1>ABOUT</h1>
                 <div class="row justify-content-center m-2">
                     <div class="col-3 col-md-2 col-lg-1 p-lg-0">
                         <hr>
@@ -117,14 +117,32 @@
                     eligendi aliquid?</div>
             </div>
 
-            <div class="col-3 text-center my-2">
+            <div class="col-5 text-center my-2">
                 <button type="button" class="btn btn-outline-light"><i class="bi bi-download mx-1"></i> Download</button>
             </div>
             
         </section>
 
-        <section class="contactme">
-            nope
+        <section class="contactme row justify-content-center p-4 py-lg-5 my-md-4 my-lg-5">
+
+            <div class="col-12 text-center">                
+                <h1>CONTACT ME</h1>
+                <div class="row justify-content-center m-2">
+                    <div class="col-3 col-md-2 col-lg-1 p-lg-0">
+                        <hr>
+                    </div>
+                    <div class="col-1 p-0"><i class="bi bi-star-fill"></i></div>
+                    <div class="col-3 col-md-2 col-lg-1 p-lg-0">
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-9 col-lg-6">
+
+                <div class="col-3">
+                    <button type="button" class="btn btn-success">Send</button>
+                </div>
+            </div>
         </section>
 
     </main>
