form attrbutes add

--- a/index.html
+++ b/index.html
@@ -191,18 +191,18 @@
                     </div>
                     <div class="col-12 col-md-9 col-lg-6">
 
-                        <form class="row g-3 my-3">
+                        <form class="row g-3 my-3" action="/https://www.google.com/search" method="get" autocomplete>
                             <div class="col-12">
                                 <label for="name" class="form-label">Name</label>
-                                <input type="name" class="form-control rounded-0 ms_color_bord" id="name">
+                                <input type="name" class="form-control rounded-0 ms_color_bord" id="name" placeholder="Nome">
                             </div>
                             <div class="col-12">
                               <label for="inputEmail4" class="form-label">Email Address</label>
-                              <input type="email" class="form-control rounded-0 ms_color_bord" id="inputEmail4">
+                              <input type="email" class="form-control rounded-0 ms_color_bord" id="inputEmail4" placeholder="ciao@boolean.it" required>
                             </div>
                             <div class="col-12">
                               <label for="phonenumber" class="form-label">Phone Number</label>
-                              <input type="tel" class="form-control rounded-0 ms_color_bord" id="phonenumber">
+                              <input type="tel" class="form-control rounded-0 ms_color_bord" id="phonenumber" placeholder="3452323345" pattern="[0-9]{3}[0-9]{2}[0-9]{2}[0-9]{3}">
                             </div>
                             <div class="col-12">
                                 <label for="textarea" class="form-label">Message</label>
