hover effects on cards

--- a/index.html
+++ b/index.html
@@ -103,28 +103,34 @@
 
                 <div class="row g-3 p-2 row-cols-1 row-cols-md-2 row-cols-lg-3">
 
-                    <div class="col">
+                    <div class="col ms_relative">
                         <img class="img-fluid rounded" src="./img/cabin.png" alt="cabin">
+                        <i class="bi bi-bag-plus-fill fs-1 text-white ms_hover_effect rounded"></i>
                     </div>
 
-                    <div class="col">
+                    <div class="col ms_relative">
                         <img class="img-fluid rounded" src="./img/cake.png" alt="cake">
+                        <i class="bi bi-bag-plus-fill fs-1 text-white ms_hover_effect rounded"></i>
                     </div>
 
-                    <div class="col">
+                    <div class="col ms_relative">
                         <img class="img-fluid rounded" src="./img/circus.png" alt="circus">
+                        <i class="bi bi-bag-plus-fill fs-1 text-white ms_hover_effect rounded"></i>
                     </div>
 
-                    <div class="col">
+                    <div class="col ms_relative">
                         <img class="img-fluid rounded" src="./img/game.png" alt="game">
+                        <i class="bi bi-bag-plus-fill fs-1 text-white ms_hover_effect rounded"></i>
                     </div>
 
-                    <div class="col">
+                    <div class="col ms_relative">
                         <img class="img-fluid rounded" src="./img/safe.png" alt="safe">
+                        <i class="bi bi-bag-plus-fill fs-1 text-white ms_hover_effect rounded"></i>
                     </div>
 
-                    <div class="col">
+                    <div class="col ms_relative">
                         <img class="img-fluid rounded" src="./img/submarine.png" alt="submarine">
+                        <i class="bi bi-bag-plus-fill fs-1 text-white ms_hover_effect rounded"></i>
                     </div>
                 </div>
             </div>
@@ -221,7 +227,7 @@
     </main>
 
     <footer class="y-5">
-        <section class="container text-center" id="footinfo">
+        <section class="container text-center ciao" id="footinfo">
 
             <div class="row g-4 p-5 justify-content-center">
 
